- Updated - core/cover inner container padding removed (use columns block for adding gutters)
- Updated - Gutenberg Styles core_blocks() list to 5.9.2 (added new blocks)
- Updated - WooCommerce updated block names exclude from theme Gutenberg Extensions
- Updated - Implement Configuration where ArrayAccess was removed + code cleanup
- Updated - Romanian local translations
- Fixed - Issue with invalid starter content for About page
- Fixed - Issue with blockGap CSS generation due to being saved as array after Gutenberg plugin update (logical block margin based on writing mode)
- Fixed - Generate CSS for vertical blockGap (eg, Group block with multiple Columns)
- Added - WooCommerce HTML starter templates
- Added - Author Box template
- Added - Default patterns as PHP files for Gutenberg 12.9.0 / Maintain HTML registration as well for backwards compat

v5.5.3/4
- Updated - Certain blocks logic to make use of custom palette colors along with default ones - previously was overwriting them
- Updated - Starter features.php to about.php + fixed a slug (for some reason it does not loads on WP.org)
- Updated - core/separator faded style width to 100% for backend overwrite
- Added - Home.html template

v5.5.2
- Updated - Header default pattern for WP.org directory

v5.5.1
- Updated - /views/ folder params inline documentation
- Updated - core/site-logo is-style-rounded CSS
- Updated - 404 page base design improvements + added big title and "Home" button
- Updated - Header columns adjustments and Navigation remove ID to allow usage of core/page-list fallback
- Updated - Page List fallback max pages changed to 3 and remove "ul" tag when used in Navigation
- Updated - Navigation blocks wp_kses to wp_kses_post + add className support to main container
- Updated - core/page-list to use Navigation link markup and styles (not sure why WP complicates things)
- Updated - Allow inline CSS for mark formatting on text blocks (headings, paragraph, lists etc)