@@ -9,7 +9,7 @@
  * @subpackage  Gutenberg\Blocks
  * @copyright   Copyright (c) 2022, WeCodeArt Framework
  * @since		5.0.0
- * @version		5.5.1
+ * @version		5.5.5
  */
 
 namespace WeCodeArt\Gutenberg\Blocks\Widgets;
@@ -119,8 +119,8 @@ class Posts extends Dynamic {
 		
 		// Meta
 		if( $display_author || $display_date ) {
-			$template .= '<!-- wp:group {"className":"gap-1 mb-1","layout":{"type":"flex","allowOrientation":false}} -->';
-			$template .= '<div class="wp-block-group gap-1 mb-1">';
+			$template .= '<!-- wp:group {"className":"hstack gap-1 mb-1"} -->';
+			$template .= '<div class="wp-block-group hstack gap-1 mb-1">';
 
 			// Author
 			if ( $display_author ) {
