@@ -3,6 +3,11 @@
 	"items": [
 		{
 			"type": "info",
+			"title": "Cool new colors!",
+			"content": "Currently working on implementing CSS vars on Gutenberg generated color classes - this will allow developers to easily create color shades like <a href='https://getbootstrap.com/docs/5.1/utilities/background/#how-it-works'>here</a>."
+		},
+		{
+			"type": "info",
 			"title": "Before updating to 5.5.5!",
 			"content": "Updating to 5.5.5 will have minor layout changes like a new gutter approach for .wp-site-blocks container instead of core/columns block padding. You will need to edit any customized templates to remove the custom padding/padding classes."
 		},
