@@ -5,8 +5,8 @@
  * Categories: wecodeart
  */
 ?>
-<!-- wp:group {"className":"d-flex flex-wrap align-items-center gap-1 mb-3"} -->
-<div class="wp-block-group d-flex flex-wrap align-items-center gap-1 mb-3">
+<!-- wp:group {"className":"hstack gap-1 mb-3"} -->
+<div class="wp-block-group hstack gap-1 mb-3">
     <!-- wp:post-author {"showAvatar":false} /-->
     <!-- wp:post-date /-->
     <!-- wp:post-terms {"term":"category"} /-->
