@@ -12,10 +12,10 @@
                 <!-- wp:pattern {"slug":"wecodeart/entry-meta"} /-->
                 <!-- wp:post-content /-->
                 <!-- wp:post-terms {"term":"post_tag","className":"d-block mb-3"} /-->
-                <!-- wp:group {"className":"mb-3","layout":{"type":"flex","allowOrientation":false,"justifyContent":"space-between"}} -->
-                <div class="wp-block-group mb-3">
+                <!-- wp:group {"className":"hstack mb-3"} -->
+                <div class="wp-block-group hstack mb-3">
                     <!-- wp:post-navigation-link {"type":"previous"} /-->
-                    <!-- wp:post-navigation-link {"textAlign":"right"} /-->
+                    <!-- wp:post-navigation-link {"className":"ms-auto"} /-->
                 </div>
                 <!-- /wp:group -->
                 <!-- wp:group {"backgroundColor":"light","className":"p-3 p-lg-4 rounded"} -->
