@@ -7,6 +7,10 @@ v5.5.5
 - Updated - WooCommerce updated block names exclude from theme Gutenberg Extensions
 - Updated - Implement Configuration where ArrayAccess was removed + code cleanup
 - Updated - Romanian local translations
+- Updated - Query Pagination Numbers border to currentColor if button styles are having transparent border
+- Updated - Query Comments Template and Pagination cleanup unnecessary methods after WP5.9 updates
+- Updated - core/gallery to use grid layout
+- Fixed - Issue with core/cover top-left content alignment
 - Fixed - Issue with invalid starter content for About page
 - Fixed - Issue with blockGap CSS generation due to being saved as array after Gutenberg plugin update (logical block margin based on writing mode)
 - Fixed - Generate CSS for vertical blockGap (eg, Group block with multiple Columns)
